tests/paczka1/fuzzy1/57805773.err
Error in line 12: DOV6Dy9Ey A692 25,56
Error in line 13: A495 S826 56,1
Error in line 14: A495 A495 10,9
Error in line 24: nprwU64N6yu S826 g6,0
Error in line 30: nprwU64N6yu A835 33,83
Error in line 28: nprwU64N6yu S826 75,4
Error in line 15: DOV6Dy9Ey A692 127,2
